Styled account page

--- a/account.html
+++ b/account.html
@@ -75,8 +75,8 @@
                         </div>
                     </div>
                 </div> -->
-                
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="changeUsername">Change Username</button>
+
+                <button type="submit" class="change-button">Change Username</button>
 
                 <form>
                     <div class="input-group mb-2">
@@ -84,11 +84,11 @@
                         <input class="form-control" type="password" placeholder="new password"/>
                     </div>
                 </form>
-                <button type="submit">Change Password</button>
+                <button type="submit" class="change-button">Change Password</button>
             </div>
-            <hr>
+            
             <div>
-                <button type="submit">Logout</button>
+                <button class="logout" type="submit">Logout</button>
             </div>
         </main>
         <footer>
